--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,6 @@ body {
 	font-family: "steamwreck";
 	font-size: 25px;
 	background-image: url("../public/red-velvet.jpg");
-	background-size: cover;
 }
 
 body .container {
@@ -82,6 +81,10 @@ a:hover {
 
 em, #deleteSubject {
 	font-size: 25px;
+}
+
+.border2 {
+	transform: rotateX(180deg) rotateY(180deg);
 }
 
 footer {
