Diminution des images bordures du forum et de l'administration

--- a/style/style.css
+++ b/style/style.css
@@ -83,6 +83,10 @@ em, #deleteSubject {
 	font-size: 25px;
 }
 
+.border1, .border2 {
+	width: 70%;
+}
+
 .border2 {
 	transform: rotateX(180deg) rotateY(180deg);
 }
