--- a/style/style.css
+++ b/style/style.css
@@ -112,6 +112,12 @@ em, #deleteSubject {
 	height: 75px;
 }
 
+@media screen and (min-width: 1200px) {
+	.newsletter {
+		padding-left: 150px;
+	}
+}
+
 footer {
 	font-size: 20px;
 	color: #c15620;
