--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,8 @@ h1 {
 
 a,
 #buttonBurger,
-h2 {
+h2,
+#bookTitle {
   color: #c15620;
 }
 
@@ -56,7 +57,8 @@ a:hover {
   text-align: center;
 }
 
-.bienvenue {
+.bienvenue,
+#bookTitle {
   font-size: 35px;
 }
 
