Ajout de fonctionnalités pour afficher les commentaires dans myPosts, les modifier ou les supprimer

--- a/style/style.css
+++ b/style/style.css
@@ -81,7 +81,8 @@ thead {
   background-image: url("../public/parchment.svg");
 }
 
-.content {
+.content,
+.comment {
   font-family: "Edmundsbury Serif", serif;
   font-size: 23px;
 }
