Mise en forme du style du nouveau lien de l'élément de class card-header

--- a/style/style.css
+++ b/style/style.css
@@ -71,6 +71,11 @@ a:hover {
   border-color: #c15620;
 }
 
+.card-header a {
+	color: white;
+	text-decoration: none;
+}
+
 .card-header,
 #welcome,
 .displayForm,
